# PuttPuttGolf

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  .pylintrc  README.md  app.db  mypy.ini  package-lock.json  package.json  pyproject.toml  runtests.bat  startserver.bat  test.html  test.py  tsconfig.json  webpack.config.ts
app/: config.py  db.py  dependancies.py  errors.py  main.py  models.py  schemas.py  security.py  utils.py
app/routes/: __init__.py  auth.py  base.py  drinks.py  orders.py  tournaments.py  users.py
app/static/: bundle.js
app/templates/: index.html
client/: App.tsx  api.ts  global.ts  hooks.ts  index.tsx  routes.tsx  styles.ts  types.ts  user.ts  utils.ts
client/common/: Input.tsx  styles.ts
client/components/: AccountBalance.tsx  AccountForm.tsx  AccountManagement.tsx  App.tsx  DateTimePicker.tsx  DeliverDrinkOrder.tsx  DeliverMap.tsx  DeliverMarker.tsx  Drawer.tsx  DrinkCart.tsx  DrinkModal.tsx  Home.tsx  Input.tsx  LayoutManager.tsx  Loader.tsx  Login.tsx  Nav.tsx  NotFound.tsx  OpenDrinkList.tsx  PasswordForm.tsx  Select.tsx  SelectedDrinkOrder.tsx  SignUp.tsx  SponsorForm.tsx  Table.tsx  TextInput.tsx  Themer.tsx  Title.tsx  TournamentBox.tsx  TournamentForm.tsx
client/pages/: AccountManagement.tsx  CreateTournament.tsx  CustomerViewOrders.tsx  DrinkOrderFufillment.tsx  DrinkOrdering.tsx  EditTournament.tsx  Home.tsx  Leaderboard.tsx  Leaderboards.tsx  Login.tsx  NotFound.tsx  SignUp.tsx  (+4 more)
doc/: FinalPresenation.pptx
migrations/: env.py
public/: index.html
tests/: conftest.py  models.py  test_models.py  test_root.py
(+50 files in other folders)
